// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Transactions
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                </div>
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                  <div
                    class="label"
                  >
                    Back
                  </div>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                  <div
                    class="label"
                  >
                    Help
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main ps"
  >
    <!---->
    <li-transaction
      address="myAddress"
      devmode="true"
      transaction-value="[object Object]"
    />
    <li-transaction
      address="myAddress"
      devmode="true"
      transaction-value="[object Object]"
    />
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageTransactions should filter the transactions 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <h2>
            Transactions
          </h2>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                </div>
                <a
                  class="back"
                >
                  <i
                    class="material-icons"
                  >
                    arrow_back
                  </i>
                  <div
                    class="label"
                  >
                    Back
                  </div>
                </a>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                  <div
                    class="label"
                  >
                    Help
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <div
      class="ni-modal-search"
    >
      <div
        class="ni-modal-search-container"
      >
        <div
          class="ni-form-group"
        >
          <!---->
          <!---->
          <div
            class="ni-form-group__field"
          >
            <div
              class="ni-modal-search-field"
            >
              <input
                class="mousetrap ni-field"
                id="search-input"
                placeholder="Search..."
                type="text"
              />
              <button
                class="ni-btn"
              >
                <span
                  class="ni-btn__container"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn__icon material-icons"
                  >
                    close
                  </i>
                  <!---->
                  <!---->
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <li-transaction
      address="myAddress"
      devmode="true"
      transaction-value="[object Object]"
    />
  </main>
</div>
`;
